Attempts at fixing layout shift

--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -63,6 +63,7 @@ p {
 
 .container {
   width: 80vw;
+  min-height: 85%;
   height: auto;
   margin: 3vh auto auto auto;
   display: flex;
